DuPont DevSB/src/objects/Material__c.object
<CustomObject>
    <fields>
        <fullName>Global_UOM_Factor__c</fullName>
        <description>Factor to convert the Quantity for Global Unit</description>
        <label>Global UOM Factor</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_UOM__c</fullName>
        <description>The Global UOM for this Material related the Material Group</description>
        <inlineHelpText>The Global UOM for this Material related the Material Group</inlineHelpText>
        <label>Global UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>60MK</fullName>
                </value>
                <value>
                    <fullName>80MK</fullName>
                </value>
                <value>
                    <fullName>140MK</fullName>
                </value>
                <value>
                    <fullName>850KG</fullName>
                </value>
                <value>
                    <fullName>25KG</fullName>
                </value>
                <value>
                    <fullName>150MK</fullName>
                </value>
                <value>
                    <fullName>50LBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentive_Points__c</fullName>
        <description>Points or value (non-currency) assigned to a given product as part of an incentive or loyalty program.</description>
        <label>Incentive Points</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Registration_Status__c</fullName>
        <description>Summary of local registration status for this Material. Pending until all local registrations are completed.</description>
        <label>Local Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Code__c</fullName>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <description>Name of material/product as defined in product master of SAP.</description>
        <label>Material Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Material_ID__c</fullName>
        <description>Unique reference number for each material record - auto generated by SFDC</description>
        <displayFormat>M-{000000000}</displayFormat>
        <inlineHelpText>SFDC Material ID</inlineHelpText>
        <label>Material ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Material_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <inlineHelpText>To be used to capture the CAS Number in case the Material Type is Substance</inlineHelpText>
        <label>Material Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Type__c</fullName>
        <label>Material Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Color</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Promotional Item</fullName>
                </value>
                <value>
                    <fullName>Sales Aid</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Special Offer Item</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_DB_ID__c</fullName>
        <label>Migration DB ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Contents__c</fullName>
        <label>Net Contents</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Organizational Group object that this Material record belongs to, lookup to Organizational Group.</description>
        <label>Organizational Group</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owning_Business__c</fullName>
        <label>Owning Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building Innovations</fullName>
                </value>
                <value>
                    <fullName>DPT-DPP</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
                <value>
                    <fullName>Performance Polymers</fullName>
                </value>
                <value>
                    <fullName>REACH</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Org__c</fullName>
        <label>Owning Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-DPP</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
                <value>
                    <fullName>M&amp;S</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Organization_Code__c</fullName>
        <description>ERP (Enterprise Resource Planning) (Financial Reporting Business) Code</description>
        <label>Owning Organization Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging_Type__c</fullName>
        <label>Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the parent material record.</description>
        <label>Related Material</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Materials (Related Material)</relationshipLabel>
        <relationshipName>Materials1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductList_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>DEC-PG</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <description>Name of the concatenation of the 9 Product Hierarchy Levels, does not exist in SAP</description>
        <label>Product Hierarchy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Url__c</fullName>
        <description>Contains the image link</description>
        <label>Product Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPC</fullName>
                    <default>true</default>
                    <label>CPC</label>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Return Material Authorization required: always return this part for analysis when faulty or replaced for any reason.</description>
        <inlineHelpText>Always return this part for analysis when faulty or replaced for any reason.</inlineHelpText>
        <label>RMA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_Name__c</fullName>
        <description>Legal registered name of product.</description>
        <label>Registered Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seed_Size__c</fullName>
        <description>Code that describes the shape and size of the seed.</description>
        <label>Seed Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Price_LC__c</fullName>
        <description>The current standard price for this material in local currency.</description>
        <label>Standard Price LC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Price_PY_LC__c</fullName>
        <label>Standard Price PY LC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_UOM__c</fullName>
        <description>Standard UOM for Material to enable reporting of equivalent units.</description>
        <label>Standard UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>60MK</fullName>
                </value>
                <value>
                    <fullName>80MK</fullName>
                </value>
                <value>
                    <fullName>140MK</fullName>
                </value>
                <value>
                    <fullName>850KG</fullName>
                </value>
                <value>
                    <fullName>25KG</fullName>
                </value>
                <value>
                    <fullName>150MK</fullName>
                </value>
                <value>
                    <fullName>50LBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transgenic_Trait__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if the Material is a transgenic</description>
        <inlineHelpText>Flag to indicate if the Material is a transgenic</inlineHelpText>
        <label>Transgenic Trait</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>DuPont</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Indirect Customer</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UOM_Factor__c</fullName>
        <description>Factor to be used to generate equivalent units.</description>
        <label>UOM Factor</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cubic meter</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>each</fullName>
                </value>
                <value>
                    <fullName>Gallon UK</fullName>
                </value>
                <value>
                    <fullName>Gallon US</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Litre</fullName>
                </value>
                <value>
                    <fullName>Pair</fullName>
                </value>
                <value>
                    <fullName>Piece</fullName>
                </value>
                <value>
                    <fullName>Pound</fullName>
                </value>
                <value>
                    <fullName>Square foot</fullName>
                </value>
                <value>
                    <fullName>Square inch</fullName>
                </value>
                <value>
                    <fullName>Square meter</fullName>
                </value>
                <value>
                    <fullName>Ton, metric</fullName>
                </value>
                <value>
                    <fullName>Hectare</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>60MK</fullName>
                </value>
                <value>
                    <fullName>Jumbo</fullName>
                </value>
                <value>
                    <fullName>72MK</fullName>
                </value>
                <value>
                    <fullName>80MK</fullName>
                </value>
                <value>
                    <fullName>150MK</fullName>
                </value>
                <value>
                    <fullName>50LBS</fullName>
                </value>
                <value>
                    <fullName>50MK</fullName>
                </value>
                <value>
                    <fullName>10KG/140MK</fullName>
                </value>
                <value>
                    <fullName>20KG</fullName>
                </value>
                <value>
                    <fullName>850KG</fullName>
                </value>
                <value>
                    <fullName>1MT</fullName>
                </value>
                <value>
                    <fullName>20MK</fullName>
                </value>
                <value>
                    <fullName>25KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Material</label>
    <listViews>
        <fullName>All_BI</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owning_Business__c</field>
            <operation>equals</operation>
            <value>Building Innovations</value>
        </filters>
        <label>All BI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BI_Corian_Colors</fullName>
        <columns>NAME</columns>
        <columns>Material_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Owning_Org__c</columns>
        <columns>Owning_Business__c</columns>
        <columns>Product_Url__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Type__c</field>
            <operation>equals</operation>
            <value>Color</value>
        </filters>
        <filters>
            <field>Owning_Org__c</field>
            <operation>equals</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Material__c.Product</value>
        </filters>
        <label>BI Corian Colors</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCCRMEngagementTeams</group>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_Materials</fullName>
        <columns>NAME</columns>
        <columns>Owning_Business__c</columns>
        <columns>Geography__c</columns>
        <columns>Owning_Org__c</columns>
        <columns>Description__c</columns>
        <columns>ERP_Material_Code__c</columns>
        <columns>ERP_Profit_Center__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ERP_Owning_Org__c</columns>
        <columns>Level__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ERP_Profit_Center_Code__c</columns>
        <columns>ExternalProduct_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owning_Org__c</field>
            <operation>equals</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>Geography__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>Description__c</field>
            <operation>notContain</operation>
            <value>Corian</value>
        </filters>
        <filters>
            <field>Material_Type__c</field>
            <operation>notEqual</operation>
            <value>Color</value>
        </filters>
        <label>BI-EMEA Materials</label>
        <language>en_US</language>
        <sharedTo>
            <role>BuildingInnovations</role>
            <roleAndSubordinatesInternal>BIEMEAAdmin</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_eWarranty</fullName>
        <columns>NAME</columns>
        <columns>Material_Type__c</columns>
        <columns>Product_Url__c</columns>
        <columns>Parent_Material__c</columns>
        <columns>Owning_Org__c</columns>
        <columns>Geography__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Type__c</field>
            <operation>equals</operation>
            <value>Color</value>
        </filters>
        <filters>
            <field>Description__c</field>
            <operation>contains</operation>
            <value>Corian</value>
        </filters>
        <label>BI-EMEA eWarranty Colors</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_Materials</fullName>
        <columns>NAME</columns>
        <columns>Material_Code__c</columns>
        <columns>Owning_Org__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owning_Org__c</field>
            <operation>greaterOrEqual</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Indirect Customer</value>
        </filters>
        <label>BI Materials except D-codes</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_Surfaces_Colors</fullName>
        <columns>NAME</columns>
        <columns>Material_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Owning_Org__c</columns>
        <columns>Owning_Business__c</columns>
        <columns>Product_Url__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Type__c</field>
            <operation>equals</operation>
            <value>Color</value>
        </filters>
        <filters>
            <field>Owning_Org__c</field>
            <operation>equals</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Material__c.Product</value>
        </filters>
        <filters>
            <field>Description__c</field>
            <operation>contains</operation>
            <value>corian,zodiaq</value>
        </filters>
        <label>BI Surfaces Colors</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCCRMEngagementTeams</group>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DPT_Materials</fullName>
        <columns>NAME</columns>
        <columns>ERP_Profit_Center_Code__c</columns>
        <columns>ERP_Product_Family__c</columns>
        <columns>ERP_Product_Hierarchy_Level_3__c</columns>
        <columns>ERP_Product_Hierarchy_Level_4__c</columns>
        <columns>ERP_Product_Hierarchy_Level_5__c</columns>
        <columns>ExternalProduct_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owning_Organization_Code__c</field>
            <operation>equals</operation>
            <value>95GE999</value>
        </filters>
        <label>DPT Materials</label>
        <language>en_US</language>
        <sharedTo>
            <group>DPTCanada</group>
            <group>DPTEMEA</group>
            <group>SAPDPTSalesHistory</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DPT_Nomex_Labels</fullName>
        <columns>NAME</columns>
        <columns>Material_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Material_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>DPT Nomex</value>
        </filters>
        <label>DPT Nomex Labels</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>DPTEMEA</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <recordTypes>
        <fullName>ERP_Material_Extended_Data</fullName>
        <active>true</active>
        <description>ERP Material – Extended Data (Sales Area)</description>
        <label>ERP Material – Extended Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>ERP_Material_General_Data</fullName>
        <active>true</active>
        <description>ERP Material – General Data</description>
        <label>ERP Material – General Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>ERP_Product</fullName>
        <active>true</active>
        <description>ERP (Enterprise Resource Planning) Product Master (i.e. from SAP)</description>
        <label>ERP Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Material</fullName>
        <active>true</active>
        <label>Marketing Material</label>
    </recordTypes>
    <recordTypes>
        <fullName>Material_Master</fullName>
        <active>true</active>
        <description>Master record type for materials data</description>
        <label>Material Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <description>Record type to manage Products</description>
        <label>Product</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>